added vendor styles

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Headlines</title>
+    <link rel="stylesheet" href="/src/vendor/bootstrap/dist/css/bootstrap.css"  />
+    <link rel="stylesheet" href="/src/vendor/font-awesome/css/font-awesome.min.css" />
 </head>
 <body>
-<div id="root">
-
-</div>
+<div id="root"></div>
 </body>
 </html>
